# non

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  FINAL_LATENCY_REPORT.md  LATENCY_FINDINGS.md  LICENSE  MANIFEST.in  MERGE_TO_MAIN_SUMMARY.md  MULTI_AGENT_STATUS.md  PRODUCTION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test_multi_agent_latency.py  test_multi_agent_mock.py  test_real_api_latency.py  test_real_latency_all_providers.py  test_scheduler_fix.py  test_simple_agent_no_hang.py
.arcanist/memories/: 087a2637.md  364cb094.md  394fab9e.md  4f977585.md  7bec36a7.md  83d59bfa.md  a4380b5e.md
.claude/skills/: arcanist-agent.md  non-development.md
.github/workflows/: ci.yml  test.yml
docs/: PUBLISHING.md  advanced-features.md  api-reference.md  architecture.md  faq.md  getting-started.md
examples/: basic_non_demo.py  cost_tracking_demo.py  deterministic_demo.py  document_synthesis_pipeline.py  fallback_demo.py  google_gemini_demo.py  latest_models_test.py  minimal_anthropic_demo.py  mock_cost_demo.py  model_discovery_demo.py  multi_agent_planner.py  multiplication_demo.py  observability_demo.py  pretty_printing_demo.py  python_interpreter_agent.py  real_api_demo.py  scheduler_demo.py  simple_pretty_demo.py  single_agent_calculator.py  test_default_config.py  test_rate_limits.py  test_string_parsing.py
examples/rlm/: README.md  __init__.py  demo.py  quick_test.py  rlm_network.py  rlm_operator.py
experiments/: README.md  __init__.py
experiments/multi_arm_bandit/: README.md  __init__.py  bandit_environment.py  benchmarks.py  check_api_keys.py  encoding.py  example_network_evolution.py  example_simple.py  example_supergpqa_evolution.py  fitness.py  genetic_algorithm.py  inspect_supergpqa.py  network_encoding.py  network_evolution.py  network_fitness.py  reasoning_tasks.py  requirements.txt  run_experiment.py  supergpqa_fitness.py  supergpqa_loader.py  test_generate_operator.py  test_implementation.py  test_operators.py  test_single_network.py  test_supergpqa.py
nons/: README.md  __init__.py
nons/core/: README.md  config.py  layer.py  network.py  node.py  scheduler.py  types.py
nons/core/agents/: README.md  agent.py  registry.py
nons/observability/: README.md  __init__.py  integration.py  logging.py  metrics.py  tracing.py
nons/operators/: README.md  base.py  deterministic.py  registry.py
nons/utils/: README.md  providers.py
scripts/: publish.sh
tests/: conftest.py  test_bugfixes.py  test_deterministic.py  test_integration.py  test_layer.py  test_network.py  test_node.py  test_observability.py  test_observability_bugfixes.py  test_operators.py  test_scheduler.py
