[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nons"
version = "0.1.0"
description = "Network of Networks (NoN): Building Optimized Compound AI Systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shrey Jain", email = "shrey@lunchlinepartners.com" }
]
maintainers = [
    { name = "Shrey Jain", email = "shrey@lunchlinepartners.com" }
]
keywords = [
    "ai",
    "llm",
    "multi-agent",
    "compound-ai",
    "orchestration",
    "anthropic",
    "openai",
    "google",
    "claude",
    "gemini",
    "gpt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-genai>=0.1.0",
    "asyncio-throttle>=1.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.1.1",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/shreypjain/non"
Documentation = "https://github.com/shreypjain/non/tree/main/docs"
Repository = "https://github.com/shreypjain/non"
Issues = "https://github.com/shreypjain/non/issues"
Changelog = "https://github.com/shreypjain/non/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nons"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
