[project]
name = "nons"
version = "0.1.0"
description = "Network of Networks (NoN): Building Optimized Compound AI Systems"
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-genai>=0.1.0",
    "asyncio-throttle>=1.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.1.1",
    "numpy>=2.0.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nons"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
