[project]
name = "nons"
version = "0.1.1"
description = "Network of Networks (NoN): Building Optimized Compound AI Systems"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "NoN Contributors", email = "shrey@lunchlinepartners.com" }
]
maintainers = [
    { name = "NoN Contributors", email = "shrey@lunchlinepartners.com" }
]
keywords = [
    "ai",
    "llm",
    "compound-ai",
    "orchestration",
    "agents",
    "multi-model",
    "network",
    "openai",
    "anthropic",
    "google-gemini",
    "prompt-engineering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-genai>=0.1.0",
    "asyncio-throttle>=1.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.1.1",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/shreypjain/non"
Repository = "https://github.com/shreypjain/non"
Documentation = "https://github.com/shreypjain/non/tree/main/docs"
Issues = "https://github.com/shreypjain/non/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nons"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
